--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <br></br>
 <div></div>
 <div id="webcam-container"></div>
+<p id="obs"></p>
 <p>Nota reconhecida (Threshold 80%)</p>
 <div id="label-container"></div>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
@@ -19,6 +20,7 @@
 
     // Load the image model and setup the webcam
     async function init() {
+
         const modelURL = URL + "model.json";
         const metadataURL = URL + "metadata.json";
 
@@ -42,6 +44,19 @@
 
         for (let i = 0; i < maxPredictions; i++) { // and class labels
             labelContainer.appendChild(document.createElement("div"));
+
+
+            navigator.mediaDevices.enumerateDevices()
+            .then(function(devices) {
+            devices.forEach(function(device) {
+                document.getElementById("obs").innerHTML = device.kind + ": " + device.label;
+            });
+            })
+            .catch(function(err) {
+            console.log(err.name + ": " + err.message);
+            });
+
+            
         }
     }
 
