Teste camera frontal

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
     // the link to your model provided by Teachable Machine export panel
-    const URL = "https://teachablemachine.withgoogle.com/models/JYyp2CM-q/";
+    const URL = "https://teachablemachine.withgoogle.com/models/VexdrxNG9/";
 
     let model, webcam, labelContainer, maxPredictions;
 
@@ -34,7 +34,7 @@
         // Convenience function to setup a webcam
         const flip = true; // whether to flip the webcam
         webcam = new tmImage.Webcam(200, 200, flip); // width, height, flip
-        await webcam.setup(); // request access to the webcam
+        await webcam.setup({ facingMode: "environment" }); // request access to the webcam
         await webcam.play();
         window.requestAnimationFrame(loop);
 
