--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div>Teachable Machine Image Model - by MF</div>
+<div>Teachable Machine Image Model - by MF 0.0.5</div>
 <br></br>
 <button type="button" onclick="init()">Start</button>
 <br></br>
@@ -6,7 +6,7 @@
 <div id="webcam-container"></div>
 <p id="obs"></p>
 <p>Nota reconhecida (Threshold 80%)</p>
-<div id="label-container"></div>
+<p id='nota_reconhecida' style="font-weight:bold;"></p>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 <script type="text/javascript">
@@ -16,7 +16,8 @@
     // the link to your model provided by Teachable Machine export panel
     const URL = "https://teachablemachine.withgoogle.com/models/VexdrxNG9/";
 
-    let model, webcam, labelContainer, maxPredictions;
+    let model, webcam, maxPredictions;
+    let array_preds = [];
 
     // Load the image model and setup the webcam
     async function init() {
@@ -40,24 +41,10 @@
 
         // append elements to the DOM
         document.getElementById("webcam-container").appendChild(webcam.canvas);
-        labelContainer = document.getElementById("label-container");
+        nota_reconhecida = document.getElementById("nota_reconhecida");
 
-        for (let i = 0; i < maxPredictions; i++) { // and class labels
-            labelContainer.appendChild(document.createElement("div"));
-
-
-            navigator.mediaDevices.enumerateDevices()
-            .then(function(devices) {
-            devices.forEach(function(device) {
-                document.getElementById("obs").innerHTML = device.kind + ": " + device.label;
-            });
-            })
-            .catch(function(err) {
-            console.log(err.name + ": " + err.message);
-            });
-
-            
-        }
+        // for (let i = 0; i < maxPredictions; i++) { // and class labels
+        // }
     }
 
     async function loop() {
@@ -66,16 +53,41 @@
         window.requestAnimationFrame(loop);
     }
 
+    function printa_predicoes(className, probability) {
+        threshold = 0.8;
+
+
+        if (className != "none") {
+
+            if (probability >= threshold) {
+
+                let classPrediction = className + ": " + probability.toFixed(2) * 100;
+                nota_reconhecida.innerHTML = classPrediction;
+                
+                // if (array_preds[className])
+                //     array_preds[className]++;
+                // else
+                //     array_preds[className] = 1;
+            }
+            else {
+                // if (array_preds[className] > 0)
+                //     array_preds[className]--;
+            }
+        }
+
+        // if (array_preds[className] > 5)
+        //     console.log(className);
+    }   
+
     // run the webcam image through the image model
     async function predict() {
         // predict can take in an image, video or canvas html element
         const prediction = await model.predict(webcam.canvas);
+
         for (let i = 0; i < maxPredictions; i++) {
+
+            printa_predicoes(prediction[i].className, prediction[i].probability)
 			
-			if (prediction[i].className != "none" & prediction[i].probability >= 0.8) {
-			    const classPrediction = prediction[i].className + ": " + prediction[i].probability.toFixed(2) * 100;
-				labelContainer.childNodes[i].innerHTML = classPrediction;
-			}
         }
     }
 </script>
