--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         // Convenience function to setup a webcam
         const flip = true; // whether to flip the webcam
-        webcam = new tmImage.Webcam(200, 200, flip); // width, height, flip
+        webcam = new tmImage.Webcam(200, 200, false); // width, height, flip
         await webcam.setup({ facingMode: "environment" }); // request access to the webcam
         await webcam.play();
         window.requestAnimationFrame(loop);
@@ -63,7 +63,7 @@
 
                 let classPrediction = className + ": " + probability.toFixed(2) * 100;
                 nota_reconhecida.innerHTML = classPrediction;
-                
+
                 // if (array_preds[className])
                 //     array_preds[className]++;
                 // else
