teste de acesso ao arquivo

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div>Teachable Machine Image Model - by MF 0.0.5</div>
+<div>Teachable Machine Image Model - by MF test file access</div>
 <br></br>
 <button type="button" onclick="init()">Start</button>
 <br></br>
@@ -14,7 +14,7 @@
     // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
     // the link to your model provided by Teachable Machine export panel
-    const URL = "https://teachablemachine.withgoogle.com/models/VexdrxNG9/";
+    const URL = "https://teachablemachine.withgoogle.com/models/x85ofqWbQ/";
 
     let model, webcam, maxPredictions;
     let array_preds = [];
