--- a/index.html
+++ b/index.html
@@ -1,93 +1,70 @@
-<div>Teachable Machine Image Model - by MF test file access</div>
-<br></br>
-<button type="button" onclick="init()">Start</button>
-<br></br>
-<div></div>
-<div id="webcam-container"></div>
-<p id="obs"></p>
-<p>Nota reconhecida (Threshold 80%)</p>
-<p id='nota_reconhecida' style="font-weight:bold;"></p>
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
+<div>NotaReal - MF 0.0.1</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
+<script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
 <script type="text/javascript">
-    // More API functions here:
-    // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
+  // Classifier Variable
+  let classifier;
+  // Model URL
+  let imageModelURL = 'https://marcoveloso.github.io/model/';
+  
+  // Video
+  let video;
+  let flippedVideo;
+  // To store the classification
+  let label = "";
 
-    // the link to your model provided by Teachable Machine export panel
-    const URL = "https://teachablemachine.withgoogle.com/models/x85ofqWbQ/";
+  // Load the model first
+  function preload() {
+    classifier = ml5.imageClassifier(imageModelURL + 'model.json');
+  }
 
-    let model, webcam, maxPredictions;
-    let array_preds = [];
+  function setup() {
+    createCanvas(320, 260);
+    // Create the video
+    video = createCapture(VIDEO);
+    video.size(320, 240);
+    video.hide();
 
-    // Load the image model and setup the webcam
-    async function init() {
+    flippedVideo = ml5.flipImage(video);
+    // Start classifying
+    classifyVideo();
+  }
 
-        const modelURL = URL + "model.json";
-        const metadataURL = URL + "metadata.json";
+  function draw() {
+    background(0);
+    // Draw the video
+    image(flippedVideo, 0, 0);
 
-        // load the model and metadata
-        // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
-        // or files from your local hard drive
-        // Note: the pose library adds "tmImage" object to your window (window.tmImage)
-        model = await tmImage.load(modelURL, metadataURL);
-        maxPredictions = model.getTotalClasses();
+    // Draw the label
+    fill(255);
+    textSize(16);
+    textAlign(CENTER);
+    text(label, width / 2, height - 4);
+  }
 
-        // Convenience function to setup a webcam
-        const flip = true; // whether to flip the webcam
-        webcam = new tmImage.Webcam(200, 200, false); // width, height, flip
-        await webcam.setup({ facingMode: "environment" }); // request access to the webcam
-        await webcam.play();
-        window.requestAnimationFrame(loop);
+  // Get a prediction for the current video frame
+  function classifyVideo() {
+    flippedVideo = ml5.flipImage(video)
+    classifier.classify(flippedVideo, gotResult);
+    flippedVideo.remove();
 
-        // append elements to the DOM
-        document.getElementById("webcam-container").appendChild(webcam.canvas);
-        nota_reconhecida = document.getElementById("nota_reconhecida");
+  }
 
-        // for (let i = 0; i < maxPredictions; i++) { // and class labels
-        // }
+  // When we get a result
+  function gotResult(error, results) {
+    // If there is an error
+    if (error) {
+      console.error(error);
+      return;
     }
-
-    async function loop() {
-        webcam.update(); // update the webcam frame
-        await predict();
-        window.requestAnimationFrame(loop);
-    }
-
-    function printa_predicoes(className, probability) {
-        threshold = 0.8;
-
-
-        if (className != "none") {
-
-            if (probability >= threshold) {
-
-                let classPrediction = className + ": " + probability.toFixed(2) * 100;
-                nota_reconhecida.innerHTML = classPrediction;
-
-                // if (array_preds[className])
-                //     array_preds[className]++;
-                // else
-                //     array_preds[className] = 1;
-            }
-            else {
-                // if (array_preds[className] > 0)
-                //     array_preds[className]--;
-            }
-        }
-
-        // if (array_preds[className] > 5)
-        //     console.log(className);
-    }   
-
-    // run the webcam image through the image model
-    async function predict() {
-        // predict can take in an image, video or canvas html element
-        const prediction = await model.predict(webcam.canvas);
-
-        for (let i = 0; i < maxPredictions; i++) {
-
-            printa_predicoes(prediction[i].className, prediction[i].probability)
-			
-        }
-    }
+    // The results are in an array ordered by confidence.
+    // console.log(results[0]);
+    label = results[0].label;
+    // Classifiy again!
+    classifyVideo();
+  }
 </script>
+Copy 
+50
+0,001
