--- a/index.html
+++ b/index.html
@@ -8,45 +8,52 @@ div {
   margin: 5px;
 }
 
+ol {
+  width: 200px;
+}
 </style>
-<div>CustomVision by MF 0.0.3 - Camera</div>
-<button type="button" onclick="init()">Start</button>
-<button type="button" onclick="photo()">Take Photo</button>
+
+<div>CustomVision by MF 0.0.5 - Camera</div>
+<div id="webcam-container"></div>
 <div>
-	<div id="webcam-container"></div>
-	<canvas id="photo-canvas" width="300" height="300"></canvas> 
+  <button type="button" onclick="photo()">Foto!</button>
 	<ol id="prediction-list"></ol>
 </div>
+<canvas id="photo-canvas"></canvas> 
+
 <script src="lib/tf.min.js"></script>
 <script src="lib/jquery-3.3.1.slim.min.js"></script>
 <script src="lib/teachablemachine-image.min.js"></script>
-<script src="js/target_classes.js"></script>
 <script src="js/predict.js"></script > 
+
 <script type="text/javascript">
-    let webcam
+  let webcam;
+  let width=640, height=360;
 
-    async function init() {
+  $( document ).ready(async function () {
+    await load_model();
+ 
+    webcam = new tmImage.Webcam(width, height, false); 
+    await webcam.setup({ facingMode: "environment" });
+    await webcam.play();
+    window.requestAnimationFrame(loop);
 
-        const flip = true; 
-        webcam = new tmImage.Webcam(300, 300, flip); 
-		await webcam.setup({ facingMode: "environment" });
-        await webcam.play();
-        window.requestAnimationFrame(loop);
+    document.getElementById("webcam-container").appendChild(webcam.canvas);
+  });
 
-        document.getElementById("webcam-container").appendChild(webcam.canvas);
-    }
-
-    async function loop() {
-        webcam.update();
-        //await predict_camera(model, webcam.canvas);
-        window.requestAnimationFrame(loop);
-    }
+  async function loop() {
+    webcam.update();
+    //await predict_camera(model, webcam.canvas);
+    window.requestAnimationFrame(loop);
+  }
 	
-    async function photo() {
-		canvas = document.getElementById("photo-canvas");
-		context = canvas.getContext('2d');
-		context.drawImage(webcam.canvas, 0, 0, 300, 300);
-		await predict_camera(model, webcam.canvas);
-    }
+  async function photo() {
+    canvas = document.getElementById("photo-canvas");
+    canvas.width = width;
+    canvas.height = height;
+    context = canvas.getContext('2d');
+    context.drawImage(webcam.canvas, 0, 0, width, height);
+    await predict_camera(model, webcam.canvas);
+  }
 
 </script>
