--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ button {
 }
 </style>
 
-<div>CustomVision by MF 0.1.0 - Camera - Online/Local Models</div>
+<div>CustomVision by MF 0.1.2 - Camera - Online/Local Models - Obj detect</div>
 <div>
   <div id="webcam-container"></div>
   <h3><ol id="prediction-list"></ol></h3>
