--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ button {
 }
 </style>
 
-<div>CustomVision by MF 0.1.5 - Camera - Online/Local Models - New Obj detect</div>
+<div>CustomVision by MF 0.2.0 - Camera - Obj detect model</div>
 <div>
   <div id="webcam-container"></div>
   <h3><ol id="prediction-list"></ol></h3>
@@ -40,7 +40,7 @@ button {
 <script src="js/predict.js"></script > 
 
 <script type="text/javascript">
-  let webcam, model, list;
+  let webcam, model, list, canvas;
   let width=640, height=360;
 
   $( document ).ready(async function () {
@@ -53,6 +53,9 @@ button {
 
     document.getElementById("webcam-container").appendChild(webcam.canvas);
     list = $("#prediction-list");
+    canvas = document.getElementById("photo-canvas");
+    canvas.width = width;
+    canvas.height = height;
   });
 
   async function loop() {
@@ -62,16 +65,10 @@ button {
   }
 	
   async function photo(greyscale=false) {
-    canvas = document.getElementById("photo-canvas");
-    canvas.width = width;
-    canvas.height = height;
-
     if (greyscale)
       canvas.classList.add("greyscale");
     else
       canvas.classList.remove("greyscale");  
-
-    list.empty();
 
     context = canvas.getContext('2d');
     context.drawImage(webcam.canvas, 0, 0, canvas.width, canvas.height);
