--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ button {
 }
 </style>
 
-<div>CustomVision by MF 0.3.8 - Camera - Obj detect model - notas 2,5,100</div>
+<div>CustomVision by MF 0.4.5 - Camera - OCR detection Tesseract</div>
 <div>
   <div id="webcam-container"></div>
   <h3><ol id="prediction-list"></ol></h3>
@@ -34,18 +34,31 @@ button {
 <canvas id="photo-canvas"></canvas> 
 
 
-<script src="lib/jquery-3.3.1.slim.min.js"></script>
+<script src="lib/jquery.min.js"></script>
 <script src="lib/tf.min.js"></script>
 <script src="lib/teachablemachine-image.min.js"></script>
-<script src="js/predict.js"></script > 
+<script src="js/predict.js"></script> 
+<script src='lib/tesseract/tesseract.min.js'></script>
+
 
 <script type="text/javascript">
   let webcam, model, list, canvas;
   let width=640, height=360;
+  let worker;
 
   $( document ).ready(async function () {
-    await load_model();
- 
+    //await load_model();
+
+    const { createWorker } = Tesseract;
+    worker = createWorker({
+      workerPath: 'lib/tesseract/worker.min.js',
+      langPath: 'lib/tesseract',
+      corePath: 'lib/tesseract/tesseract-core.wasm.js',
+    });
+
+    console.log('worker: ' + worker);
+
+
     webcam = new tmImage.Webcam(width, height, false); 
     await webcam.setup({ facingMode: "environment" });
     await webcam.play();
@@ -72,8 +85,19 @@ button {
 
     context = canvas.getContext('2d');
     context.drawImage(webcam.canvas, 0, 0, canvas.width, canvas.height);
+
+
+      await worker.load();
+      await worker.loadLanguage('eng');
+      await worker.initialize('eng');
+      const { data: { text } } = await worker.recognize(webcam.canvas);
+      list.append(`<li>OCR: ${text}</li>`);
+      await worker.terminate();
+
+
+    //await predict_ocr(canvas);
     //await predict_online(canvas);
-    await predict_obj_detect(model, webcam.canvas);
+    //await predict_obj_detect(model, webcam.canvas);
   }
 
 </script>
