--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@ button {
 }
 </style>
 
-<div>CustomVision by MF 0.4.9 - Camera - OCR detection Tesseract</div>
+<div>CustomVision by MF 0.5.0 - Camera - OCR detection Local x Online</div>
 <div>
   <div id="webcam-container"></div>
-  <h3><ol id="prediction-list"></ol></h3>
+  <h3><ul id="prediction-list"></ul></h3>
 </div>
 <div>
-  <button type="button" onclick="photo()">Foto em Cores</button>
-  <button type="button" onclick="photo(true)">Foto em Preto e Branco</button>
+  <button type="button" onclick="photo(true)">Foto Predição Local</button>
+  <button type="button" onclick="photo(false)">Foto Predição Online</button>
 </div>
 <canvas id="photo-canvas"></canvas> 
 
@@ -48,17 +48,7 @@ button {
 
   $( document ).ready(async function () {
     //await load_model();
-
-    const { createWorker } = Tesseract;
-    worker = createWorker({
-      workerPath: 'lib/tesseract/worker.min.js',
-      langPath: 'lib/tesseract',
-      corePath: 'lib/tesseract/tesseract-core.wasm.js',
-    });
-    await worker.load();
-    await worker.loadLanguage('eng');
-    await worker.initialize('eng');
-
+    await load_tesseract();
 
     webcam = new tmImage.Webcam(width, height, false); 
     await webcam.setup({ facingMode: "environment" });
@@ -78,19 +68,14 @@ button {
     window.requestAnimationFrame(loop);
   }
 	
-  async function photo(greyscale=false) {
-    if (greyscale)
-      canvas.classList.add("greyscale");
-    else
-      canvas.classList.remove("greyscale");  
-
+  async function photo(local=true) { 
     context = canvas.getContext('2d');
     context.drawImage(webcam.canvas, 0, 0, canvas.width, canvas.height);
 
-    list.empty();
-    const { data: { text } } = await worker.recognize(webcam.canvas);
-    list.append(`<li>OCR: ${text}</li>`);
-
+    if (local)
+      await predict_ocr_local(webcam.canvas);
+    else
+      await predict_ocr_online(webcam.canvas);
 
     //await predict_ocr(canvas);
     //await predict_online(canvas);
