Aumento no numero de linhas

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 </script>
 
 <body>
-  <label for="clipboard">XClipboard by MF</label>
+  <label for="clipboard">XClipboard by MF 0.2</label>
 
-  <textarea id="clipboard" name="clipboard" rows="10" cols="100">  
+  <textarea id="clipboard" name="clipboard" rows="20" cols="100">  
   </textarea>  
 
   <button onclick="update()">Salvar</button>
