--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   $(document).ready(function() {
 
     $(window).focus(function() {
-      let now = new Date(Date.now()).toLocaleString();
+      let now = new Date(Date.now()).toLocaleString('pt-BR');
 
       $("#status").text("Refreshing data...");
       getData();
@@ -38,8 +38,8 @@
         clearTimeout(qr_timeout);
 
       qr_timeout = setTimeout(function(){
-        let now = new Date(Date.now()).toLocaleString();
-        
+        let now = new Date(Date.now()).toLocaleString('pt-BR');
+
         $("#status").text("Autosaving...");
         update();
         $("#status").text("Autosaved at " + now);
