status em negrito

--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
   }
 
   label {
-      display: block;
-      margin-bottom: 10px;
-  }  
+    margin-bottom: 10px;
+  } 
+  
+  p {
+    font-weight: bold;
+  }
+   
 </style>
 
 <script src="jquery.min.js"></script>    
@@ -96,10 +100,10 @@
 </script>
 
 <body>
-  <label for="clipboard">PowerClip by MF 0.6</label>
-
+  <label for="clipboard">PowerClip by MF 0.6</label>  
+  
   <textarea id="clipboard" name="clipboard" rows="20" cols="100"></textarea>  
- 
+
   <p id="status"></p>
 </body>
 </html>
