--- a/index.html
+++ b/index.html
@@ -29,12 +29,10 @@
 
   $(document).ready(function() {
 
-    $(window).focus(function() {
-      let now = new Date(Date.now()).toLocaleString('pt-BR');
+    getData();
 
-      $("#status").text("Refreshing data...");
-      getData();
-      $("#status").text("Refreshed data at " + now);
+    $(window).focus(function() {      
+      getData();      
     });
 
     $("#clipboard").on('input', function(){     
@@ -51,12 +49,11 @@
 
     });
 
-  });
-
-  getData();
+  });  
 
   function getData() {
-    $('#clipboard').prop('disabled', true);
+    $('#refresh').show();
+    $('#clipboard').hide();
 
     let settings = {
       "async": true,
@@ -76,7 +73,8 @@
       if(texto)
         texto = texto + '\n\n';
         
-      $('#clipboard').prop('disabled', false);
+      $('#clipboard').show();
+      $('#refresh').hide();
       $("#clipboard").focus().val(texto);
     });        
   }
@@ -105,9 +103,11 @@
 </script>
 
 <body>
-  <label for="clipboard">PowerClip by MF 0.7</label>  
+  <label for="clipboard">PowerClip by MF 0.8</label>  
   
   <textarea id="clipboard" name="clipboard" rows="20" cols="100"></textarea>  
+
+  <p id="refresh">Loading data...</p>
 
   <p id="status"></p>
 </body>
