1 breakline ao carregar

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       let texto = response.clip_area;
 
       if(texto)
-        texto = texto + '\n\n';
+        texto = texto + '\n';
         
       $('#clipboard').show();
       $('#refresh').hide();
@@ -103,7 +103,7 @@
 </script>
 
 <body>
-  <label for="clipboard">PowerClip by MF 0.8</label>  
+  <label for="clipboard">PowerClip by MF 0.9</label>  
   
   <textarea id="clipboard" name="clipboard" rows="20" cols="100"></textarea>  
 
