--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 
 <style>
   textarea {
-      padding: 10px;
-      line-height: 1.5;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      box-shadow: 1px 1px 1px #999;
-      margin-bottom: 10px;
-      display: block;
+    padding: 10px;
+    line-height: 1.5;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 1px #999;
+    margin-bottom: 10px;
+    float: left;
   }
 
-  label {
+  div {
+    text-align: center;
+  }
+
+  label {     
+    display: block;   
     margin-bottom: 10px;
   } 
   
@@ -70,8 +75,17 @@
     $.ajax(settings).done(function (response) {
       let texto = response.clip_area;
 
-      if(texto)
+      $("div").empty();
+
+      if(texto) {
+        links = texto.match(/([\w+]+\:\/\/)?([\w\d-]+\.)*[\w-]+[\.\:]\w+([\/\?\=\&\#.]?[\w-]+)*\/?/gm);
+
+        links.forEach((link, index) => {
+          $("div").append('<p><a href="' + link + '">Link ' + index + '</a>');
+        });  
+
         texto = texto + '\n';
+      }                  
         
       $('#clipboard').show();
       $('#refresh').hide();
@@ -105,7 +119,9 @@
 <body>
   <label for="clipboard">PowerClip by MF 0.9</label>  
   
-  <textarea id="clipboard" name="clipboard" rows="20" cols="100"></textarea>  
+  <textarea id="clipboard" name="clipboard" rows="20" cols="80"></textarea>  
+
+  <div id="links"></div>
 
   <p id="refresh">Loading data...</p>
 
