Não força o foca no textarea

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         
       $('#clipboard').show();
       $('#refresh').hide();
-      $("#clipboard").focus().val(texto);
+      $("#clipboard").val(texto);
     });        
   }
 
@@ -117,7 +117,7 @@
 </script>
 
 <body>
-  <label for="clipboard">PowerClip by MF 0.9</label>  
+  <label for="clipboard">PowerClip by MF (Marcommand) 1.0</label>  
   
   <textarea id="clipboard" name="clipboard" rows="20" cols="80"></textarea>  
 
