Ajustes de variaveis

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
       $("#links").empty();
 
       if(texto) {
-        pattern = /https?:\/\/(www\.)?[-a-zA-Z0-9@:%._\+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b([-a-zA-Z0-9()@:%_\+.~#?&//=]*)/gm
+        let pattern = /https?:\/\/(www\.)?[-a-zA-Z0-9@:%._\+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b([-a-zA-Z0-9()@:%_\+.~#?&//=]*)/gm
         
-        links = texto.match(pattern);        
+        let links = texto.match(pattern);        
 
         links.forEach((link, index) => {          
           $("#links").append('<p><a target="_blank" href="' + link + '">Link ' + (index+1) + '</a>');
@@ -116,7 +116,7 @@
 </script>
 
 <body>
-  <label for="clipboard">PowerClip by MF (Marcommand) 1.1</label>  
+  <label for="clipboard">PowerClip by MF (Marcommand) 1.2</label>  
   
   <div id="clipboard_area">
     <textarea id="clipboard" name="clipboard" rows="15" cols="80"></textarea> 
