Volta carga no focus

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
     getData();
 
-    // $(window).focus(function() {      
-    //   getData();      
-    // });
+    $(window).focus(function() {      
+      getData();      
+    });
 
   });  
 
